fix(various): high contrast on Chromium Edge (#205)
* fix(accordion): high contrast on Chromium Edge

* fix(table): high contrast on chromium edge

* fix(breadcrumb): high contrast on chromium edge

* fix(rating): high contrast on chromium edge

* fix(slider): high contrast on chromium edge

* fix(spinner): high contrast on chromium edge

* fix(card): high contrast on chromium edge

--- a/projects/ng-aquila/src/accordion/expansion-panel-header.scss
+++ b/projects/ng-aquila/src/accordion/expansion-panel-header.scss
@@ -216,11 +216,11 @@ $extra-light-header-title-margin-after: 8px;
   }
 
   :host.is-disabled.is-disabled .nx-expansion-panel__header-content {
-    color: GrayText;
+    color: GrayText !important;
     background-color: buttonFace;
 
     .nx-expansion-panel__chevron {
-      color: GrayText;
+      color: GrayText!important;
     }
   }
 }
